dropshot/tests/fail/bad_endpoint2.stderr
error: `self` parameter is only allowed in associated functions
  --> $DIR/bad_endpoint2.rs:11:23
   |
11 | async fn bad_endpoint(self) -> Result<HttpResponseOk<()>, HttpError> {
   |                       ^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error[E0401]: can't use generic parameters from outer function
  --> $DIR/bad_endpoint2.rs:11:23
   |
7  | #[endpoint {
   | ---------- `Self` type implicitly declared here, by this `impl`
...
11 | async fn bad_endpoint(self) -> Result<HttpResponseOk<()>, HttpError> {
   |                       ^^^^
   |                       |
   |                       use of generic parameter from outer function
   |                       use a type here instead
